src/test/deca/syntax/invalid/classique/test-Invalid-2.deca
/* Description
//    tests de programme lexicalement Incorrect.
//
// Resultats
//    Ligne 1  Erreur de syntaxe.
//    Pas de * / fermant. et pas de  
//
// Historique
//    cree le 01/01/2025

idf _autre_idf
{
}
// un commentaire.
